# equity-research-report-agent

./: pyproject.toml  testing.ipynb  trained_agents_data.pkl  training_data.pkl
configs/: data_engineering_agents.yaml  data_engineering_tasks.yaml
excel_index/Rexit Valuation/: chroma.sqlite3
flow/: data_engineering_crew.py
knowledge/rexit/: Rexit Valuation.xlsm
output/: info-detailed-report.md  prompt-to-questions.md  table-of-content.md
utils/: custom_tools.py  models.py  utils.py
