[project]
name = "equity-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.1",
    "crewai>=1.2.0",
    "crewai-tools>=1.2.0",
    "duckduckgo-search>=8.1.1",
    "fastexcel>=0.16.0",
    "firecrawl-py>=4.5.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "langchain-openai>=1.0.1",
    "litellm>=1.79.0",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "selenium>=4.38.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.12.0",
    "treelib>=1.8.0",
    "webdriver-manager>=4.0.2",
]
